--- a/views/login.ejs
+++ b/views/login.ejs
@@ -83,6 +83,9 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
+                <div>
+                    <p>Don't have an account! <a href="/signup">Signup</a></p>
+                </div>
                 <button type="submit">Login</button>
             </form>
         </div>
