--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -87,6 +87,9 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
+                <div>
+                    <p>Already have an account! <a href="/login">Login</a></p>
+                </div>
                 <button type="submit">Signup</button>
             </form>
         </div>
